force-app/main/default/objects/AWS_S3__mdt/AWS_S3__mdt.object-meta.xml
<CustomObject>
    <label>AWS_S3</label>
    <pluralLabel>AWS_S3s</pluralLabel>
</CustomObject>