force-app/main/default/objects/AWS_S3__mdt/fields/AccessKeyId__c.field-meta.xml
<CustomField>
    <fullName>AccessKeyId__c</fullName>
    <label>AccessKeyId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>