force-app/main/default/objects/AWS_S3__mdt/fields/IdentityPoolId__c.field-meta.xml
<CustomField>
    <fullName>IdentityPoolId__c</fullName>
    <label>IdentityPoolId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>