force-app/main/default/objects/AWS_S3__mdt/fields/SecretAccessKey__c.field-meta.xml
<CustomField>
    <fullName>SecretAccessKey__c</fullName>
    <label>SecretAccessKey</label>
    <length>100</length>
    <type>Text</type>
</CustomField>